--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -7,10 +7,16 @@
 .header{
   display: flex;
   justify-content: flex-start;
+  position: relative;
 }
 
 .logo{
   width: 230px;
   overflow: hidden;
   margin-left:-30px
+}
+.btn{
+  margin-right: 0;
+  position: absolute;
+  right: 2%;
 }
