--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -15,8 +15,22 @@
   overflow: hidden;
   margin-left:-30px
 }
-.btn{
+.btnBox{
+  width:8%;
   margin-right: 0;
   position: absolute;
   right: 2%;
+  ;
 }
+.btn{
+  width:100%;
+
+}
+.fontBox{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
